add task app to portfolio

--- a/index.html
+++ b/index.html
@@ -205,19 +205,44 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                   </a>
                 </div>
               </div>
+              <div class="work-links  col-md-4">
+                <figure class="cap-bot">
+                  <img class="work-img" src="images/todo.png" alt="screen shot of to do app">
+                  <figcaption class="work-caption">
+                    <p class="techs-used text-center">Technologies Used:</p>
+                    <ul class="work-caption tech-list text-center">
+                      <li>React</li>
+                      <li>Express</li>
+                      <li>PostgreSQL</li>
+                      <li>JavaScript</li>
+                      <li>JSON Web Token</li>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div class="links">
+                  <a href="https://do-all-the-things.herokuapp.com/" class="work-label" target="_blank">
+                    <p class="link">Live</p>
+                  </a>
+                  <a href="https://github.com/mimi26/task-organizer" target="_blank" class="work-label">
+                    <p class="link">Github</p>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="row work-container work-bottom-row">
               <div class="work-links top-work col-md-4">
                 <figure class="cap-bot">
                   <img class="work-img" src="images/scheduler.png" alt="screen shot of event scheduler">
                   <figcaption class="work-caption">
                     <p class="techs-used text-center">Technologies Used:</p>
-                      <ul class="work-caption tech-list text-center">
-                        <li>React/React Router</li>
-                        <li>Express</li>
-                        <li>PostgreSQL</li>
-                        <li>JavaScript</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                      </ul>
+                    <ul class="work-caption tech-list text-center">
+                      <li>React/React Router</li>
+                      <li>Express</li>
+                      <li>PostgreSQL</li>
+                      <li>JavaScript</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                    </ul>
                   </figcaption>
                 </figure>
                 <div class="links">
@@ -229,20 +254,18 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                   </a>
                 </div>
               </div>
-            </div>
-            <div class="row work-container work-bottom-row">
-              <div class="work-links  col-md-6">
+              <div class="work-links  col-md-4">
                 <figure class="cap-bot">
                   <img class="work-img" src="images/techie.png" alt="screen shot of tech.ie app">
                   <figcaption class="work-caption">
                     <p class="techs-used text-center">Technologies Used:</p>
-                      <ul class="work-caption tech-list text-center">
-                        <li>Express</li>
-                        <li>PostgreSQL</li>
-                        <li>JavaScript</li>
-                        <li>HTML</li>
-                        <li>Sass</li>
-                      </ul>
+                    <ul class="work-caption tech-list text-center">
+                      <li>Express</li>
+                      <li>PostgreSQL</li>
+                      <li>JavaScript</li>
+                      <li>HTML</li>
+                      <li>Sass</li>
+                    </ul>
                   </figcaption>
                 </figure>
                 <div class="links">
@@ -254,7 +277,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                   </a>
                 </div>
               </div>
-              <div class="work-links col-md-6">
+              <div class="work-links col-md-4">
                 <figure class="cap-bot">
                   <img class="work-img" src="images/skycast.png" alt="screen shot of weather app">
                   <figcaption class="work-caption">
