add aria-labels to link icons for accessibility

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to knit, fly through the air on aerial silks, sing, play guitar, and ferment foods. I have 6 nieces and nephews and live in Brooklyn, NY with my cat Mutty.
 
             </p>
-            <hr class="line">
+            <hr class="line" tabindex="-1">
             <p class="skills">My Skills Include:
               <ul class="skills">
                 <li>React</li>
@@ -317,19 +317,19 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
         <div id="contact">
           <h1 class="header">Contact</h1>
             <div class="contact-links">
-              <a href="mailto:mimi13klein@gmail.com" class="contact-link" target="_blank">
+              <a href="mailto:mimi13klein@gmail.com" class="contact-link" target="_blank" aria-label="email mimi klein">
                 <span class="fa-stack fa-lg">
-                  <i class="fa fa-envelope-open fa-stack-2x" aria-hidden="true"></i>
+                  <i class="fa fa-envelope-open fa-stack-2x" aria-hidden="true" title="email Mimi Klein"></i>
                 </span>
               </a>
-              <a href="https://github.com/mimi26" class="contact-link" target="_blank">
+              <a href="https://github.com/mimi26" class="contact-link" target="_blank" aria-label="mimi klein on github">
                 <span class="fa-stack fa-lg">
-                  <i class="fa fa-github fa-stack-2x" aria-hidden="true"></i>
+                  <i class="fa fa-github fa-stack-2x" aria-hidden="true" title="Mimi Klein on Github"></i>
                 </span>
               </a>
-              <a href="https://www.linkedin.com/in/mimi-klein/" class="contact-link" target="_blank">
+              <a href="https://www.linkedin.com/in/mimi-klein/" class="contact-link" target="_blank" aria-label="mimi klein on linkedin">
                 <span class="fa-stack fa-lg">
-                  <i class="fa fa-linkedin fa-stack-2x" aria-hidden="true"></i>
+                  <i class="fa fa-linkedin fa-stack-2x" aria-hidden="true" title="Mimi Klein on LinkedIn"></i>
                 </span>
               </a>
             </div>
